# XPONGE

./: .gitignore  README.md  ben.mol2  main.py  pylintrc  pyproject.toml  setup.py  sqm.in  sqm.out
.github/workflows/: build-wheel.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
Xponge/: __init__.py  __main__.py  build.py  load.py  process.py
Xponge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Xponge/analysis/: md_analysis.py  sasa.py  wham.py
Xponge/assign/: __init__.py  bond_order.py  phmodel.py
Xponge/assign/tpacm4/: __init__.py
Xponge/forcefield/amber/: _alternating.py  ff14sb.py  ff19sb.py  gaff2.py
Xponge/forcefield/base/: bond_base.py
Xponge/forcefield/charmm/: __init__.py  tip3p.py  tip3p_charmm.py
Xponge/forcefield/edip/: __init__.py
Xponge/forcefield/martini/: __init__.py
Xponge/forcefield/special/: fep.py
Xponge/forcefield/sw/: __init__.py
Xponge/helper/: __init__.py  cv.py  file.py  gromacs.py  math.py  namespace.py
Xponge/mdrun/: __init__.py
Xponge/tools/: __init__.py  json2csv.py  mbar.py  mmgbsa.py  mol2rfe.py  ti.py  traj_analysis.py
Xponge/tools/unittests/: __init__.py  base.py  test_0_base.py  test_10_cmake.py  test_1_assign.py  test_1_charge.py  test_1_cif.py  test_1_helper.py  test_1_hybrid36.py  test_1_io.py  test_1_lattice.py  test_1_process.py  test_1_sasa.py  test_2_ff14sb.py  test_2_ffbase.py  test_3_bsc1.py  test_3_charmm27.py  test_3_charmm36.py  test_3_ff14sb.py  test_3_ff19sb.py  test_3_mw.py  test_3_ol3.py  test_3_oplsaam.py  test_4_large_system_efficiency.py  test_4_min_efficiency.py  test_5_nopbc.py  (+21 more)
docs/: box_angle_upgrade.md  crystal_modeling.md  doc_requirements.yml  get_docstrings.py
docs/plans/: 2026-03-13-set-box-padding-design.md
docs/source/: MD_post-process.rst  Xponge.analysis.rst  Xponge.assign.rst  Xponge.assign.tpacm4.rst  Xponge.forcefield.AMBER.rst  Xponge.forcefield.BASE.rst  Xponge.forcefield.CHARMM27.rst  Xponge.forcefield.SPECIAL.rst  Xponge.forcefield.amber.glycam_06j.rst  Xponge.forcefield.base.rst  Xponge.forcefield.rst  Xponge.forcefield.sybyl.rst  Xponge.helper.rst  Xponge.mdrun.rst  Xponge.rst  Xponge.tools.rst  Xponge.tools.unittests.rst  command_line_tools.rst  conf.py  dependency.rst  index.rst  test.rst
test/: charmm_gui_gromacs_to_sponge.py
(+4 files in other folders)
