[project]
name = "Xponge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
]

[project.scripts]
Xponge = "Xponge.__main__:main"
"Xponge.mdrun" = "Xponge.mdrun.__main__:main"

[project.optional-dependencies]
extra = [
    "geometric>=1.1",
    "matplotlib>=3.10.8",
    "mdanalysis>=2.10.0",
    "pubchempy>=1.0.5",
    "pyscf>=2.11.0",
    "rdkit>=2025.9.3",
    "xpongelib>=1.2.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]
