[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Xponge"
dynamic = ["version"]
description = "A Python package to perform pre- and post-processing of molecular simulations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yijie Xia", email = "yijiexia@pku.edu.cn" },
]
urls = { Homepage = "https://gitee.com/gao_hyp_xyj_admin/xponge" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy<2",
]

[project.scripts]
Xponge = "Xponge.__main__:main"
"Xponge.mdrun" = "Xponge.mdrun.__main__:main"

[project.optional-dependencies]
extra = [
    "geometric>=1.1",
    "matplotlib>=3.10.8",
    "mdanalysis>=2.9.0",
    "pubchempy>=1.0.5",
    "pyscf>=2.11.0",
    "rdkit>=2025.9.3",
    "xpongelib>=1.2.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.mol2", "*.frcmod", "*.dat", "*.itp"]

[tool.setuptools.dynamic]
version = { attr = "Xponge.__init__.__version__" }
